<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almost_black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/soft_black"
        android:gravity="bottom|end"
        android:text="@string/inputTxt"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitSeven"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitEight"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitNine"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/opDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/soft_black"
            android:text="@string/opDivide"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitFour"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitFive"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitSix"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/opMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/soft_black"
            android:text="@string/opMultiply"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitOne"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitTwo"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitThree"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/opMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/soft_black"
            android:text="@string/opMinus"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/dot"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/digitZero"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/opEq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/soft_black"
            android:text="@string/opEq"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>